# debate-fastapi-reference

./: .env.example  README.md  llms.txt  pyproject.toml
app/: auto_debater.py  config.py  handler.py  main.py  store.py
app/routes/: debates.py  ws.py
docs/: ai-vs-ai-guide.md  architecture.md  e2e-test-log.md  websocket-protocol.md
static/: index.html
tests/: conftest.py  test_e2e.py  test_endpoints.py
